--- a/css/style.css
+++ b/css/style.css
@@ -53,29 +53,35 @@ h2,
 }
 
 body {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
   background-color: #EBF9FF;
-  font-size: 16px;
+  font-size: 1rem;
   color: whitesmoke;
 }
 body header {
-  padding: 20px 0;
+  padding: 1.3em 0;
+}
+body .search-bar {
+  text-align: center;
 }
 body .search-bar input {
   width: 72%;
   min-width: 150px;
   padding: 0.4em 0.3em;
   margin-bottom: 1em;
+  border-radius: 5px;
+  border: 1px solid black;
 }
 body .search-bar input:focus {
-  border: none;
+  outline: none;
+  border: 1.5px solid black;
 }
-body .search-bar button {
-  padding: 5px 10px;
+body .search-bar #check-weather {
+  padding: 0.3em 0.4em;
   border: none;
   color: inherit;
   border-radius: 10px;
@@ -84,15 +90,17 @@ body .search-bar button {
   box-shadow: 1px 1px 1px 1px lightgrey;
   transition: all 1ms ease-in;
 }
-body .search-bar button:active {
+body .search-bar #check-weather:active {
   transform: translateY(1px);
   box-shadow: 0px 1px 1px 1px lightgrey;
-  height: 27.5px;
+  height: 30.5px;
 }
 body .search-bar .error {
+  width: 41%;
+  margin: 0.3em auto;
   display: none;
   color: #F6839C;
-  font-size: 12px;
+  font-size: 0.8rem;
 }
 body .panel-wrapper {
   display: none;
@@ -100,13 +108,15 @@ body .panel-wrapper {
   align-items: center;
   text-shadow: 0px 0px 0.2 px black;
   max-width: 500px;
+  margin-top: 1em;
+  flex-wrap: wrap;
 }
 body .panel-wrapper .temp-box {
   justify-content: space-between;
 }
 body .panel-wrapper .temp-box img {
   width: 30%;
-  margin-right: 15px;
+  margin-right: 1em;
 }
 body .panel-wrapper .temp-box .icon-weather {
   display: flex;
@@ -114,7 +124,7 @@ body .panel-wrapper .temp-box .icon-weather {
   padding: 5px 0px;
 }
 body .panel-wrapper .app-right {
-  padding-left: 15px;
+  padding-left: 0.9em;
 }
 body .panel-wrapper .panel {
   display: flex;
@@ -122,14 +132,8 @@ body .panel-wrapper .panel {
   justify-content: center;
   min-width: 220px;
   min-height: 220px;
-  margin: 10px 20px;
+  margin: 0.3em;
   border-radius: 10px;
-  padding: 10px;
+  padding: 0.625em;
   box-shadow: 1px 1px 1px 1px lightgrey;
-}
-
-@media (max-width: 490px) {
-  .panel-wrapper {
-    flex-wrap: wrap;
-  }
 }/*# sourceMappingURL=style.css.map */
